--- a/.github/workflows/trading_bot_schedule.yml
+++ b/.github/workflows/trading_bot_schedule.yml
@@ -3,7 +3,7 @@ name: Trading Bot Schedule
 on:
   schedule:
     # Runs every day at 2:00 AM UTC
-    - cron: '0 * * * *'
+    - cron: '* * * * *'
 
   workflow_dispatch:
     inputs:
