--- a/.github/workflows/trading_bot_schedule.yml
+++ b/.github/workflows/trading_bot_schedule.yml
@@ -2,7 +2,7 @@ name: Trading Bot Schedule
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '0 * * * *'
 
   workflow_dispatch:
     inputs:
