--- a/.github/workflows/trading_bot_schedule.yml
+++ b/.github/workflows/trading_bot_schedule.yml
@@ -32,6 +32,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: debug stupid env
+      run: |
+        echo "Account Type is $OKX_ACCOUNT_TYPE"
+
     - name: Run trading bot
       run: |
         python trading_bot.py --api_key ${{ secrets.OKX_API_KEY }} --secret_key ${{ secrets.OKX_SECRET_KEY }} --passphrase ${{ secrets.OKX_PASSPHRASE }} --account_type  ${{ env.OKX_ACCOUNT_TYPE }}
