--- a/.github/workflows/trading_bot_schedule.yml
+++ b/.github/workflows/trading_bot_schedule.yml
@@ -34,11 +34,11 @@ jobs:
 
     - name: debug stupid env
       run: |
-        echo $OKX_ACCOUNT_TYPE
+        echo ${{vars.OKX_ACCOUNT_TYPE}}
 
     - name: Print all environment variables
       run: printenv
 
     - name: Run trading bot
       run: |
-        python trading_bot.py --api_key ${{ secrets.OKX_API_KEY }} --secret_key ${{ secrets.OKX_SECRET_KEY }} --passphrase ${{ secrets.OKX_PASSPHRASE }} --account_type  ${{ env.OKX_ACCOUNT_TYPE }}
+        python trading_bot.py --api_key ${{ secrets.OKX_API_KEY }} --secret_key ${{ secrets.OKX_SECRET_KEY }} --passphrase ${{ secrets.OKX_PASSPHRASE }} --account_type  ${{ vars.OKX_ACCOUNT_TYPE }}
